<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.bimdroid.bimservice.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_port"/>
        <Spinner
            android:id="@+id/port_spinner"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:prompt="@string/serial_port_prompt"/>
        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/progress_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:padding="8dp"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress_bar_title"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:indeterminate="true"
                android:visibility="invisible"/>
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">
        <EditText
            android:id="@+id/ibus_message"
            android:layout_width="400dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/send_to_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to_car" />
        <Button
            android:id="@+id/lock_door"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_door" />
        <Button
            android:id="@+id/open_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_window" />
    </LinearLayout>

    
</RelativeLayout>
